# TFG

./: .gitignore  README.md  init.py  makefile  pull_request_template.md  pyproject.toml  requirements.txt
src/: __init__.py  main.py
src/argumentParser/: __init__.py  abstractArguments.py  argumentParser.py
src/constants/: __init__.py  constants.py
src/dataStructures/: __init__.py  dfa.py  dfaStochastic.py  watsonCrickAutomata.py
src/dataStructures/tests/: test_dfa.py  test_dfaStochastic.py  test_wc_automata.py
src/fasta/: __init__.py  chromosome.py  fastaReader.py
src/fasta/tests/: test_chromosome.py  test_fasta_reader.py
src/lib/: __init__.py
src/logging/: __init__.py  tqdmLoggingHandler.py
src/model/: __init__.py  abstractModel.py  extendedParser.py  ktssModel.py  ktssValidation.py  ktssViterbi.py  lowerParser.py  parserVcf.py  simplifiedParser.py
src/model/tests/: factories.py  test_extended_parser_vcf.py  test_ktss_model.py  test_ktss_validation.py  test_ktss_viterbi.py  test_lower_parser_vcf.py  test_simplified_parser_vcf.py
src/parser/: __init__.py  extendedParser.py  lowerParser.py  mutationParser.py  parserVcf.py  simplifiedParser.py
src/parser/tests/: factories.py  helpers.py  test_extended_parser_vcf.py  test_lower_parser_vcf.py  (+2 more)
src/runner/: __init__.py  runner.py
src/tests/: parsed_data.pvcf  parsed_simplified_data.pvcf  parserVcfTest.py  test.fa  test.fa.index  test_vcf_reader.py  vcfReaderTest.py  vcfTest.vcf
src/utils/: __init__.py  arithmetic.py  folders.py  genomics.py
src/vcf/: __init__.py  vcfReader.py
(+10 files in other folders)
