[tool.poetry]
name = "tfg"
version = "0.1.0"
description = ""
authors = ["agranadosb <agranadosb55199@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autopep8 = "1.5.5"
docutils = "0.16"
fastaparser = "1.1"
packaging = "20.9"
pycodestyle = "2.6.0"
rstcheck = "3.3.1"
toml = "0.10.2"
pytest = "^6.2.3"
PyVCF = "^0.6.8"
argparse = "^1.4.0"
tqdm = "^4.60.0"
sortedcontainers = "^2.3.0"
textdistance = "^4.2.1"
pdoc3 = "^0.9.2"
python-Levenshtein = "^0.12.2"

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
